# ChangeLog for dev-util/bzr
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.43 2007/11/14 18:54:27 hawking Exp $

*bzr-0.92-r1 (14 Nov 2007)

  14 Nov 2007; Ali Polatel <hawking@gentoo.org>
  +files/bzr-0.92-no-pyrex.patch, -bzr-0.92.ebuild, +bzr-0.92-r1.ebuild:
  revbump. don't regenerate .c files from .pyx when pyrex is found, upstream
  ships them already.

  14 Nov 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -files/bzr-0.16-timed-tests-fix.patch, -bzr-0.16.ebuild, -bzr-0.90.ebuild,
  -bzr-0.91.ebuild, -bzr-0.91-r1.ebuild:
  Dropped old versions.

*bzr-0.92 (14 Nov 2007)

  14 Nov 2007; Lukasz Strzygowski <lucass@gentoo.org> +bzr-0.92.ebuild:
  Version bump (bug #199112). Fixed celementtree dep, added sftp use-flag
  (bug #196486). Cleanup.

*bzr-0.91-r1 (05 Oct 2007)

  05 Oct 2007; Ali Polatel <hawking@gentoo.org> +files/71bzr-gentoo.el,
  +bzr-0.91-r1.ebuild:
  revbump. updated emacs support, bug 194691. Thanks to Christian Faulhammer
  <opfer@gentoo.org>

*bzr-0.91 (26 Sep 2007)

  26 Sep 2007; Ali Polatel <hawking@gentoo.org> +bzr-0.91.ebuild:
  version bump.

*bzr-0.90 (06 Sep 2007)

  06 Sep 2007; Ali Polatel <hawking@gentoo.org>
  +files/bzr-0.90-tests-fix_root.patch, +files/bzr-0.90-tests-sgid.patch,
  +bzr-0.90.ebuild:
  Version bump. Added a patch to fix tests when running w/o userpriv (bug
  173301) and another patch to fix permission tests when running beneath a
  directory with the setgid bit set. Pass --install-data /usr/share option to
  distutils_src_install instead of patching for man page location.

  10 Jul 2007; Markus Ullmann <jokey@gentoo.org> bzr-0.17.ebuild:
  Stable on x86

  10 Jul 2007; Markus Ullmann <jokey@gentoo.org> bzr-0.17.ebuild:
  RESTRICT test as noted on bug #173301

*bzr-0.17 (22 Jun 2007)

  22 Jun 2007; Marien Zwart <marienz@gentoo.org>
  -files/bzr-0.10-fix-manpage-location.patch, -bzr-0.15.ebuild,
  bzr-0.16.ebuild, +bzr-0.17.ebuild: