@@ -1,0 +1,3 @@
+MD5 b71c7920a157bb508284ad77abcedf94 bzr-1.0.tar.gz 3381194
+RMD160 89e26f25ba5abe04178de30ed50a726f8d44ed4d bzr-1.0.tar.gz 3381194
+SHA256 a6308bf3755630c0012ff2f0aa0fa4713b8527e8a3e629346951666590465cf9 bzr-1.0.tar.gz 3381194
