@@ -1,0 +1,3 @@
+MD5 b3ed4d9290bc65daf31d67695eb9f6a1 bzrtools-1.0.0.tar.gz 81308
+RMD160 86ee6c67e449ef1773d13c20e6854c111bde9ef4 bzrtools-1.0.0.tar.gz 81308
+SHA256 d0eb04444e45b84ef6d137dd18d4bed410fbc74889edea571aff1b93c39ded2f bzrtools-1.0.0.tar.gz 81308
