@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.43 2007/11/14 18:54:27 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.44 2007/12/14 09:30:45 hawking Exp $
+
+*bzr-1.0 (14 Dec 2007)
+
+  14 Dec 2007; Ali Polatel <hawking@gentoo.org> +bzr-1.0.ebuild:
+  Version bump.
 
 *bzr-0.92-r1 (14 Nov 2007)
 
